# megalopolis

./: .gitignore  Cargo.toml
MegalopolisProjectPlanning/: TODO.md
MegalopolisProjectPlanning/Excalidraw/: CameraRotationSketch.md
shaders/: terrain_frag.wgsl  terrain_vert.wgsl
src/: main.rs  perlin_noise.rs  resource_generator.rs  river_generator.rs
src/components/: camera_control_component.rs
