[package]
name = "megalopolis"
version = "0.1.2"
edition = "2021"

[dependencies]
gamezap = {git = "https://github.com/GameHunter101/gamezap-lib"}
bytemuck = { version = "1.13.1", features = ["derive"] }
tokio = {version = "1.35.1", features = ["full"]}
wgpu = "0.17.0"
nalgebra = "0.32.3"
image = "0.24.6"
imgui = {version = "0.11.0", features = ["tables-api"]}
pollster = "0.3.0"
algoe = {git = "https://github.com/GameHunter101/Algoe" }

[dependencies.sdl2]
version = "0.36"
default-features = false
features = ["raw-window-handle"]
